# NuitkaGUI

./: .gitignore  CHANGELOG.md  NuitkaGUI.py  README.md  Ui_nuitkaGUI.py  func.py  main.py  nuitkaGUI.py  nuitkaGUI.ui  pyinstaller_json.json  pyproject.toml  requirements.txt  resource.qrc  resource_rc.py  signal_bus.py  userConfig.json  user_config.json
docs/: nuitkaHelp.txt  pluginList.txt  项目说明.md
log/: 2023-07-28_204753.txt
scripts/: qrc2py.py  tran_material2fluent.py  ui2py.py
src/: Ui_nuitkaGUI.py  config.py  core.py  func.py  nuitkaGUI.py  nuitkaGUI.ui  resource.qrc  resource_rc.py  signal_bus.py  start.py  view.py
src/common/: download.py  init_manager.py  logger.py
src/component/: bubble_tip.py  cmd_text_edit.py  draggable_file_tree_widget.py  dropMask.py  drop_mask.py  embedFileTree.py  embed_file_tree.py  progress_window.py
src/conf/: config.py  config_path.py  initVar.py  runtime_config.pkl
src/core/: globalVar.py  initVar.py  paths.py  settings.py  version.py
src/customWidget/: bubbleTips.py  dragableqlineedit.py  filetree.py  myProgressDialog.py  processWindow.py  splashScreen.py
ui/: Ui_nuitkaGUI.py  about_page.ui  about_page_fluent.ui  advanced_page.ui  args_page_fluent.ui  basic_page.ui  basic_page_fluent.ui  basic_page_new.ui  basic_page_old.ui  component_list_item.ui  embed_page.ui  embed_page_fluent.ui  home.ui  nuitkaGUI.py  nuitkaGUI.ui  nuitkaHelp.txt  output_page.ui  page2.ui  page3.ui  page4.ui  page5.ui  plugin_page.ui  plugin_page_fluent.ui  resource.qrc  resource_rc.py  settings_page.ui  welcome_page.ui  welcome_page_fluent.ui
(+131 files in other folders)
